# pyutil

./: .gitignore  LICENSE  README.md  dummy_service.py  mypy.ini  mypy.py  pyproject.toml  runner.py  setup.cfg  setup.cfg.toml  setup.py  vmhi.py  wordlist.py  xkcd_pass.py
.github/workflows/: python-package.yml
pyutil/: wordlist.py  xkcd_pass.py
stubs/: wordlist.pyi
tests/: test_nothing.py  test_wordlist.py
worddata/: us1990.surnames.raw.bz2
wordlist/: __init__.py  __main__.py  wordlist.py  xkcd_pass.py
wordlist/worddata/: wonderland.txt.bz2
