[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "wordlist"
author = "matt wartell"
author-email = "matt.wartell@gmail.com"
home-page = "https://github.com/mwartell"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
description-file = "README.md"
requires-python= ">=3.6"

[tool.flit.metadata.requires-extra]
dev = [
    "black",
    "flake8",
]
test = [
    "pytest",
]

[tool.flit.scripts]
worlist = "wordlist:main"
